--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,24 +7,13 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:layout_width="215dp"
-        android:layout_height="137dp"
-        android:text="RU Cafe"
-        app:autoSizeTextType="uniform"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.047" />
-    <TextView
         android:id="@+id/t1"
         android:layout_width="187dp"
         android:layout_height="72dp"
         android:layout_marginTop="36dp"
         android:background="#f9e79f"
         android:gravity="center"
-        android:text= "Order a Donut"
+        android:text = "Order a Donut"
         android:textColor="#c0392b"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -88,6 +77,7 @@
         android:layout_width="202dp"
         android:layout_height="185dp"
         android:layout_marginTop="52dp"
+        android:onClick="donutView"
         android:scaleType="fitXY"
         android:src="@drawable/donut"
         app:layout_constraintBottom_toBottomOf="parent"
