--- a/app/src/main/res/layout/donut_layout.xml
+++ b/app/src/main/res/layout/donut_layout.xml
@@ -32,12 +32,28 @@
             android:layout_height="80dp"
             android:orientation="horizontal">
 
+            <TextView
+                android:id="@+id/textView7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="5"
+                android:text="Quantiy: " />
+
+            <Spinner
+                android:id="@+id/spinnerquantity"
+                android:layout_width="wrap_content"
+                android:paddingTop = "20dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="5"
+                />
+
             <Spinner
                 android:id="@+id/spinnerdrop"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="137dp"
                 android:layout_weight="5"
                 />
+
         </LinearLayout>
 
         <LinearLayout
