--- a/app/src/main/res/layout/donut_layout.xml
+++ b/app/src/main/res/layout/donut_layout.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
-    tools:context=".MainActivity">
+    tools:context=".DonutActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -69,11 +69,12 @@
                 android:paddingTop="50dp" />
 
             <Button
-                android:id="@+id/button10"
+                android:id="@+id/addDonut"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Add" />
+                android:text="Add"
+                android:onClick="onAdd"/>
 
             <Button
                 android:id="@+id/removeDonut"
@@ -84,10 +85,10 @@
 
         </LinearLayout>
 
-        <ListView
-            android:layout_width="match_parent"
-            android:layout_height="90dp"
-            android:layout_weight="1" />
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycleItems"
+            android:layout_width="wrap_content"
+            android:layout_height="160dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
