--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -77,7 +77,7 @@
         android:layout_width="202dp"
         android:layout_height="185dp"
         android:layout_marginTop="52dp"
-        android:onClick="donutView"
+        android:onClick="DonutActivity"
         android:scaleType="fitXY"
         android:src="@drawable/donut"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -93,6 +93,7 @@
         android:layout_marginTop="52dp"
         android:scaleType="fitXY"
         android:src="@drawable/coffee"
+        android:onClick="CoffeeActivity"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -106,6 +107,7 @@
         android:layout_marginTop="52dp"
         android:scaleType="fitXY"
         android:src="@drawable/shoppingbag"
+        android:onClick="BasketActivity"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -119,6 +121,7 @@
         android:layout_marginTop="52dp"
         android:scaleType="fitXY"
         android:src="@drawable/clipboard"
+        android:onClick="OrderingActivity"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
