--- a/app/src/main/res/layout/donut_layout.xml
+++ b/app/src/main/res/layout/donut_layout.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
-    tools:context=".DonutActivity">
+    tools:context=".DonutView">
 
     <LinearLayout
         android:layout_width="match_parent"
