--- a/app/src/main/res/layout/donut_layout.xml
+++ b/app/src/main/res/layout/donut_layout.xml
@@ -88,7 +88,8 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycleItems"
             android:layout_width="match_parent"
-            android:layout_height="305dp" />
+            android:layout_height="305dp"
+            android:layout_weight="1"/>
 
         <LinearLayout
             android:layout_width="match_parent"
