--- a/app/src/main/res/layout/recycleview.xml
+++ b/app/src/main/res/layout/recycleview.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingTop="10dp"
-    android:paddingBottom="10dp"
-    >
+    android:paddingBottom="10dp">
 
     <TextView
         android:id="@+id/order_content"
@@ -14,5 +12,13 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:paddingLeft="16dp" />
+    <Button
+        android:id="@+id/btn_add"
+        android:layout_width="47dp"
+        android:layout_height="43dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginBottom="0dp"
+        android:text="-"
+        android:textSize="18sp" />
 
 </LinearLayout>
