--- a/app/src/main/res/layout/donut_layout.xml
+++ b/app/src/main/res/layout/donut_layout.xml
@@ -22,7 +22,7 @@
             android:gravity="center" />
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/donutPics"
             android:layout_width="match_parent"
             android:layout_height="134dp"
             app:srcCompat="@drawable/yeast" />
