--- a/app/src/main/res/layout/coffee_layout.xml
+++ b/app/src/main/res/layout/coffee_layout.xml
@@ -97,7 +97,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/textView5"
+                android:id="@+id/textViewSub"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -115,7 +115,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/coffee_name" />
+                android:text="@string/coffee_name"
+                android:onClick="onAddOrder"/>
 
             <Button
                 android:id="@+id/button7"
