send user back after adding order, resets the lists. added toasts as well

--- a/app/src/main/res/layout/basket_layout.xml
+++ b/app/src/main/res/layout/basket_layout.xml
@@ -10,6 +10,16 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Ordering Basket"
+            android:textSize="35sp"
+            android:textColor="#000000"
+            android:gravity="center"
+            app:fontFamily="casual" />
+
         <ListView
             android:id="@+id/listvie"
             android:layout_width="409dp"
@@ -67,7 +77,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="total amount" />
+                android:text="total due" />
 
             <TextView
                 android:id="@+id/totalamount"
@@ -75,7 +85,16 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="" />
+
         </LinearLayout>
+
+        <Button
+            android:id="@+id/submitOrder"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="onPlace"
+            android:text="Place Order" />
 
     </LinearLayout>
 
