--- a/app/src/main/res/layout/donut_layout.xml
+++ b/app/src/main/res/layout/donut_layout.xml
@@ -16,10 +16,11 @@
             android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center"
             android:text="Order a Donut"
-            android:textSize="30sp"
             android:textColor="#000000"
-            android:gravity="center" />
+            android:textSize="30sp"
+            app:fontFamily="casual" />
 
         <ImageView
             android:id="@+id/donutPics"
