--- a/app/src/main/res/layout/store_orders_layout.xml
+++ b/app/src/main/res/layout/store_orders_layout.xml
@@ -17,13 +17,9 @@
             android:textColor="#000000"
             android:textSize="30sp" />
 
-        <ListView
-            android:layout_width="match_parent"
-            android:layout_height="563dp" />
-
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <Button
@@ -40,6 +36,11 @@
                 android:layout_weight="1"
                 android:text="Button" />
         </LinearLayout>
+
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="563dp" />
+
     </LinearLayout>
 
 </LinearLayout>
