--- a/app/src/main/res/layout/coffee_layout.xml
+++ b/app/src/main/res/layout/coffee_layout.xml
@@ -17,7 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="Ordering Coffee Pane"
+            android:text="@string/coffeepane"
             android:textColor="#000000"
             android:textSize="30sp" />
 
@@ -100,22 +100,20 @@
                 android:id="@+id/textViewSub"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="TextView" />
+                android:layout_weight="1" />
 
             <TextView
                 android:id="@+id/textView6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="TextView" />
+                android:layout_weight="1" />
 
             <Button
                 android:id="@+id/button4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/coffee_name"
+                android:text="@string/submitcoffee"
                 android:onClick="onAddOrder"/>
 
             <Button
@@ -141,8 +139,7 @@
             <Button
                 android:id="@+id/button6"
                 android:layout_width="match_parent"
-                android:layout_height="18dp"
-                android:text="Button" />
+                android:layout_height="18dp" />
         </LinearLayout>
 
     </LinearLayout>
