--- a/app/src/main/res/layout/recycleview.xml
+++ b/app/src/main/res/layout/recycleview.xml
@@ -18,7 +18,7 @@
         android:layout_height="43dp"
         android:layout_marginStart="0dp"
         android:layout_marginBottom="0dp"
-        android:text="-"
+        android:text="@string/removedash"
         android:textSize="18sp" />
 
 </LinearLayout>
