--- a/app/src/main/res/layout/store_orders_layout.xml
+++ b/app/src/main/res/layout/store_orders_layout.xml
@@ -13,7 +13,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="Store Orders Pane"
+            android:text="@string/storeorderheader"
             android:textColor="#000000"
             android:textSize="30sp" />
 
