--- a/app/src/main/res/layout/coffee_layout.xml
+++ b/app/src/main/res/layout/coffee_layout.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".CoffeeView"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:id="@+id/coffeelayout">
 
     <LinearLayout
         android:layout_width="match_parent"
