--- a/app/src/main/res/layout/store_orders_layout.xml
+++ b/app/src/main/res/layout/store_orders_layout.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -15,12 +16,15 @@
             android:gravity="center"
             android:text="@string/storeorderheader"
             android:textColor="#000000"
-            android:textSize="30sp" />
+            android:textSize="30sp"
+            app:fontFamily="casual" />
+
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            >
 
 <!--            <Button-->
 <!--                android:id="@+id/button"-->
@@ -40,7 +44,7 @@
         <ListView
             android:layout_width="match_parent"
             android:layout_height="563dp"
-            android:id="@+id/orderList"/>
+            android:id="@+id/orderList" />
 
     </LinearLayout>
 
